refactor DirectoryTask: improve naming, structure, and filter logic for clarity and maintainability
- Rename variables and parameters for clarity (e.g., result → searchResults, query → searchQuery)
- Extract and reorganize file and directory processing logic into smaller methods
- Consolidate and clarify filter handling for filenames, extensions, content, and time ranges
- Replace inner FilterEntity class with record and streamline filter entity creation
- Improve content and time filter matching logic for readability and efficiency
- Add utility methods for collection copying and filter matching
- Update TimeRangeTableModel.Entry to use Lombok annotations for boilerplate reduction